--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!doctype html>
 <html>
 <script type="module">
-import {Database} from './serverless2/database.js';
+// import {Database} from './serverless2/database.js';
+// init();
 
+import {ref, computed} from './ref.js';
+window.ref = ref;
+window.computed = computed;
 
-init();
+window.a = ref(5);
+window.b = ref(6);
+window.c = ref(7);
+window.s1 = computed(() => a.value + b.value);
+window.s2 = computed(() => s1.value + c.value);
+window.s3 = computed(() => s1.value + s2.value);
 
 </script>
 
