--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 // import {Database} from './serverless2/database.js';
 // init();
 
-import {ref, computed, refMap, computedMap} from './ref.js';
+import {ref, refMap, computed} from './ref.js';
 window.ref = ref;
-window.computed = computed;
 window.refMap = refMap;
-window.computedMap = computedMap;
+window.computed = computed;
 
 window.a = ref(5);
 window.b = ref(6);
@@ -17,9 +16,9 @@ window.s1 = computed(() => a.value + b.value);
 window.s2 = computed(() => s1.value + c.value);
 window.s3 = computed(() => s1.value + s2.value);
 
-window.x = refMap();
-window.y = x.map((key, val) => val + a.value);
-window.z = y.rekey((key, val) => new Map().set(val % 2, val));
+window.x = refMap([['init', 2]]);
+window.y = x.select((key, val) => val + a.value);
+window.z = y.groupby((key, val) => new Map().set(val % 2, val));
 x.value.set('hi', 5);
 
 </script>
