slightly working code

--- a/index.html
+++ b/index.html
@@ -91,5 +91,6 @@
 
   <div onclick="actions.relatedClick(this)" data-template="related"></div>
 
+<script src="diff.js"></script>
 <script type="module" src="main.js"></script>
 
