handle creating new book and rename id to bookId

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="sectionTitle">Create</div>
       <div class="newSection">
-        <input class="noteName inputText" type="text" data-bind="noteName" placeholder="name">
+        <input class="noteName inputText" type="text" placeholder="name">
         <div class="newNotes button" onclick="a.newBook(this)">Create New</div>
       </div>
       <div class="sectionTitle"></div>
