--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <div class="page diffPage">
       <div class="topBar">
-        <div class="backButton" onclick="history.back()">‹</div>
+        <div class="barButton" onclick="history.back()">‹</div>
         <div class="spacer"></div>
         <div class="connectivity"></div>
       </div>
@@ -109,7 +109,7 @@
       <div class="botBar">
         <div class="diffSave" onclick="a.diffSave()">Save</div>
         <div class="spacer"></div>
-        <div class="diffCancel" onclick="history.back()">Cancel</div>
+        <div class="diffCancel" onclick="a.diffRevert()">Revert Changes</div>
       </div>
     </div>
   </div>
