improve importing, fix online light on reopen

--- a/server.html
+++ b/server.html
@@ -37,6 +37,7 @@ tr:nth-child(even) {
   <div class="commands">
     <input type="button" value="download backup now" onclick="a.downloadNow()">
     <input type="button" value="download backup daily" onclick="a.downloadDaily()">
+    <input type="button" value="import json" onclick="a.importJSON()">
     <div class="daily" data-bind="daily"></div>
   </div>
   <table class="databases">
