--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
     </div>
   </div>
 
-  <div class="item" onclick="a.openItem(this)" data-template="item">
+  <div class="item" onclick="a.openNote(this)" data-template="item">
     <pre data-bind="text"></pre>
   </div>
 
-  <div onclick="a.openItem(this)" data-template="related"></div>
+  <div onclick="a.openNote(this)" data-template="related"></div>
 
   <div class="book" data-template="book">
     <div class="bookRow">
