--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
         data-bind="editor"></textarea>
       <div class="related" data-bind="related"></div>
       <div class="botBar sendKeys">
-        <div onclick="a.sendKey(this)">=</div>
-        <div onclick="a.sendKey(this)">(</div>
-        <div onclick="a.sendKey(this)">)</div>
-        <div onclick="a.sendKey(this)">:</div>
-        <div onclick="a.sendKey(this)">_</div>
-        <div onclick="a.sendKey(this)">+</div>
+        <div onclick="a.editorSendKey(this)">=</div>
+        <div onclick="a.editorSendKey(this)">(</div>
+        <div onclick="a.editorSendKey(this)">)</div>
+        <div onclick="a.editorSendKey(this)">:</div>
+        <div onclick="a.editorSendKey(this)">_</div>
+        <div onclick="a.editorSendKey(this)">+</div>
         <div onclick="a.editorDash(this)">-</div>
-        <div onclick="a.sendKey(this)">'</div>
+        <div onclick="a.editorSendKey(this)">'</div>
         <div onclick="a.editorUndo(this)">↶</div>
         <div onclick="a.editorRedo(this)">↷</div>
         <div onclick="a.editorIndent(this, false)">⇦</div>
