--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <option value="10">Archive</option>
         </select>
         <div class="spacer"></div>
-        <div class="barText" onclick="a.doneNote(this)">diff</div>
+        <div class="barText" onclick="a.doneNote(this)">done</div>
         <div class="spacer"></div>
         <div class="barText" onclick="a.diffNote(this)">diff</div>
         <div class="spacer"></div>
